--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,4 @@
-name: DeepLeague
+name: DeepLeague2
 channels:
 - menpo
 - defaults
@@ -38,4 +38,3 @@ dependencies:
   - tensorflow-tensorboard==0.4.0
   - werkzeug==0.14.1
   - youtube-dl==2018.1.21
-
